header styled correct - changes to button styling, app icon and spacing between items

--- a/style.css
+++ b/style.css
@@ -1,7 +1,80 @@
-.header {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto" sans-serif;
+  }
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-style: solid;
+    height: 70px;
 }
 
 .header-list {
     list-style: none;
 }
+
+header li {
+    display: inline;
+}
+
+header li a {
+    text-decoration: none;
+    color: #232423;
+    font-size: 13px;
+}
+
+header li a:hover {
+    text-decoration: underline;
+}
+
+#left-list {
+    display: flex;
+    justify-content: space-between;
+    width: 110px;
+    margin-left: 25px;
+}
+
+#right-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 300px;
+    height: auto;
+    margin-right: 25px;
+}
+
+#app-icon {
+    width: 25px;
+}
+
+#app-icon:hover {
+    cursor: pointer;
+    background-color:#e2e4e5;
+    background-size: 50px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+}
+
+#sign-in {
+    background-color: #4285F4;
+    color: white;
+    width: 110px;
+    height: 38px;
+    border-style: none;
+    border-radius: 4px;
+    font-size: 15px;
+}
+
+#sign-in:hover {
+    cursor: pointer;
+}
+
+
+
